--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -4,23 +4,41 @@
     flex-wrap: wrap;
     width: 100%;
 }
-
-.book-content {
-    position: relative;
-    width: 17%;
-    height: 45vh;
-    padding: 10px 20px;
-    margin:1%;
-    transition: 0.5s;
-    display: flex;
-    flex-direction: column;
-    border-radius: 15px;
-    /* border:1px solid blue; */
-    padding: 0;
-    box-sizing: border-box;
+@media screen and (min-width: 1500px) {
+    .book-content {
+        position: relative;
+        width: 18%;
+        height: 35vh;
+        padding: 10px 20px;
+        margin:1%;
+        transition: 0.5s;
+        display: flex;
+        flex-direction: column;
+        border-radius: 15px;
+        /* border:1px solid blue; */
+        padding: 0;
+        box-sizing: border-box;
+    }
 }
 
-@media (max-width: 800px) {
+@media screen and (min-width: 800px) and (max-width: 1500px) {
+    .book-content {
+        position: relative;
+        width: 17%;
+        height: 45vh;
+        padding: 10px 20px;
+        margin:1%;
+        transition: 0.5s;
+        display: flex;
+        flex-direction: column;
+        border-radius: 15px;
+        /* border:1px solid blue; */
+        padding: 0;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 800px) {
     .book-content {
         position: relative;
         width: 80%;
