--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -171,6 +171,143 @@
     width: 65%;
     height:75vh;
 }
+@media screen and (max-width: 800px) {
+    .books-modal-container.active .content {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgb(255, 255, 255);
+        border-radius: 35px;
+        width: 90%;
+        height:80vh;
+        overflow: hidden;
+    }
+    .books-modal-container.active .content .book {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height:100%;
+        padding: 1vw;
+        overflow: hidden;
+    }
+    .books-modal-container.active .content .book .left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 40%;
+        /* border:1px solid red; */
+        overflow: hidden;
+    }
+    .books-modal-container.active .thumbnail {
+        overflow: hidden;
+    }
+    .books-modal-container.active .content .book .left .thumbnail img {
+        object-fit: cover;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+    .books-modal-container.active .content .book .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 60%;
+        padding: 0;
+        margin: 0;
+        /* border:1px solid blue; */
+        overflow: hidden;
+    }
+    .books-modal-container.active .content .book .right .title{
+        /* border:1px solid green; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1px;
+        width: 100%;
+        /* border:1px solid red; */
+    }
+    .books-modal-container.active .content .book .right .title h2{
+        margin:0;
+        padding: 0;
+        font-size: 1.75em;
+        text-align: center;
+    }
+    .books-modal-container.active .content .book .right .authors{
+        /* border:1px solid red; */
+        display: flex;
+        justify-content: center;
+        margin-bottom:0;
+        padding: 0;
+        width: 100%;
+    }
+    .books-modal-container.active .content .book .right .authors h3{
+        margin:0;
+        padding: 0;
+        /* border:1px solid red; */
+        font-size: 1em;
+        font-weight: 200;
+    }
+    .books-modal-container.active .content .book .right .summary{
+        /* border:1px solid red; */
+        display: flex;
+        justify-content: center;
+        margin:0;
+        padding: 2vh;
+        width: 100%;
+        max-height: 30%;
+        overflow: hidden;
+        font-size: 0.75em;
+    }
+    .books-modal-container.active .content .book .right .topics{
+        /* border:1px solid red; */
+        display: flex;
+        justify-content: center;
+        margin:0;
+        padding: 0;
+        width: 100%;
+        font-size: 0.75em;
+        font-weight: 400;
+    }
+    .books-modal-container.active .content .book .right .rating{
+        /* border:1px solid red; */
+        display: flex;
+        justify-content: center;
+        margin:0;
+        width: 100%;
+        color:#218380;
+    }
+    .books-modal-container.active .content .book .right .buy{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 25px;
+        background: #218380;
+        display: flex;
+        justify-content: center;
+        margin:0;
+        padding: 0;
+        width: 50%;
+        height: 10%;
+    }
+    .books-modal-container.active .content .book .right a{
+        text-decoration: none;
+        font-size: 1.25em;
+        font-weight: 600;
+        color:white;
+    }
+    .book-modal-close {
+        position: absolute;
+        right:0;
+        z-index:1000;
+        min-width: 100px;
+        min-height: 100px;
+        /* border:100px solid red; */
+    }
+}
 .books-modal-container.active .content .book {
     display: flex;
     width: 100%;
