--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -13,6 +13,12 @@ nav{
     z-index: 100;
     transition:0.5s;
 }
+@media screen and (max-width: 800px) {
+    header {
+        margin-bottom: 10vh;
+    }
+}
+
 nav ul {
     float: left;
     display: block;
